# TR-143-Server

./: .gitignore  CMakeLists.txt  Makefile  README.md  RPiCrossTools.cmake  UDPEcho.c  httpserver.c  targetsys.h
gslib/: CMakeLists.txt
gslib/CVS/: Entries  Root
gslib/auxsrc/: CMakeLists.txt  dns_lookup.c  dns_lookup.h  memtestwrapper.c
gslib/auxsrc/CVS/: Entries
gslib/backsrc/: auxwget.c
gslib/backsrc/CVS/: Entries
gslib/backsrc/tests/: testParser.c
gslib/backsrc/tests/CVS/: Entries
gslib/src/: Makefile  event.c  md5.c  protocol.c  protocol.h  utils.c  utils.h  wget.c  wget.h  www.c  www.h
gslib/src/CVS/: Entries
includes/: sys.h
includes/CVS/: Entries
